# eclingo-lute

./: .pylintrc  CLAUDE.md  PROMPTS.md  noxfile.py  pyproject.toml  requirements.txt
.claude/skills/clingo-5vs6-transformer/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
helper_test/: helper_parsing.py
skills/clingo6/transformers/: ex0_v5.py  ex0_v6.py
src/eclingo/: control.py  grounder.py  literals.py  main.py
src/eclingo/clingox/: ast.py  backend.py  pprint.py  program.py  reify.py  solving.py  theory.py
src/eclingo/clingox/testing/: ast.py
src/eclingo/parsing/: parser.py
src/eclingo/parsing/transformers/: ast_reify.py  astutil.py  (+3 more)
src/eclingo/solver/: candidate.py  generator.py  solvers.py  tester.py  world_view_builder.py
tests/: _test_tester.py  ast_tester.py  build_programs.py  generated_programs.py  helper_build_programs.py  parse_programs.py  programs_back.py  programs_helper.py  test_astutil.py  test_candidate.py  test_eclingo.py  test_eclingo_examples.py  test_generator_reification.py  test_literals.py  test_parsing.py  test_preprocessor.py  test_project.py  test_propagator.py  test_reification.py  test_reification2.py  test_reification3.py  test_reification4.py  test_reification5.py  test_solver_reification.py  test_tester_reification.py  test_theory_atom_parser.py  test_transformers.py  test_util.py  test_worldview_builder_reification.py
tests/clingox/: test_ast.py  test_backend.py  test_pprint.py  test_program.py  test_reify.py  test_solving.py  test_theory.py
tests/clingox/testing/: test_ast.py
