[tool.poetry]
name = "eclingo"
version = "1.2.0"
description = ""
authors = ["Jorge Fandinno <jfandinno@unomaha.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
clingo = "^6.0.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.4.1"}
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/potassco/eclingo"
repository = "https://github.com/potassco/eclingo"
keywords = ["epistemic logic programming", "answer set programming", "logic programming"]

[tool.poetry.scripts]
eclingo = "eclingo.main:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["eclingo"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
#warn_return_any = true
#disallow_untyped_defs = true